Revisando as mensagens e incluindo as outras culturas no código.

--- a/Ilevus/Ilevus.csproj
+++ b/Ilevus/Ilevus.csproj
@@ -247,7 +247,49 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Include="img\**" />
-    <None Include="jsx\**" />
+    <None Include="jsx\app.js" />
+    <None Include="jsx\Application.jsx" />
+    <None Include="jsx\AppSetup.jsx" />
+    <None Include="jsx\core\store\Fluxbone.jsx" />
+    <None Include="jsx\core\store\User.jsx" />
+    <None Include="jsx\core\store\UserSession.jsx" />
+    <None Include="jsx\core\util\DateUtils.jsx" />
+    <None Include="jsx\core\util\Messages.jsx" />
+    <None Include="jsx\core\view\Error.jsx" />
+    <None Include="jsx\core\view\Home.jsx" />
+    <None Include="jsx\core\view\NotFound.jsx" />
+    <None Include="jsx\core\view\Search.jsx" />
+    <None Include="jsx\core\view\user\Account.jsx" />
+    <None Include="jsx\core\view\user\ConfirmEmail.jsx" />
+    <None Include="jsx\core\view\user\Login.jsx" />
+    <None Include="jsx\core\view\user\Management.jsx" />
+    <None Include="jsx\core\view\user\Profile.jsx" />
+    <None Include="jsx\core\view\user\PublicProfile.jsx" />
+    <None Include="jsx\core\view\user\RecoverPassword.jsx" />
+    <None Include="jsx\core\view\user\Register.jsx" />
+    <None Include="jsx\core\view\user\ResetPassword.jsx" />
+    <None Include="jsx\core\widget\ErrorAlert.jsx" />
+    <None Include="jsx\core\widget\form\EditableDataView.jsx" />
+    <None Include="jsx\core\widget\form\Form.jsx" />
+    <None Include="jsx\core\widget\form\HorizontalInput.jsx" />
+    <None Include="jsx\core\widget\form\VerticalInput.jsx" />
+    <None Include="jsx\core\widget\LoadingGauge.jsx" />
+    <None Include="jsx\core\widget\MainMenu.jsx" />
+    <None Include="jsx\core\widget\Modal.jsx" />
+    <None Include="jsx\core\widget\Pagination.jsx" />
+    <None Include="jsx\core\widget\Popover.jsx" />
+    <None Include="jsx\core\widget\TopBar.jsx" />
+    <None Include="index.html" />
+    <None Include="jsx\vendor\anvil.js" />
+    <None Include="jsx\vendor\anvil\alert.jsx" />
+    <None Include="jsx\vendor\anvil\button.jsx" />
+    <None Include="jsx\vendor\anvil\carousel.jsx" />
+    <None Include="jsx\vendor\anvil\collapse.jsx" />
+    <None Include="jsx\vendor\anvil\dropdown.jsx" />
+    <None Include="jsx\vendor\anvil\modal.jsx" />
+    <None Include="jsx\vendor\anvil\tooltip.jsx" />
+    <None Include="jsx\vendor\anvil\util.jsx" />
+    <None Include="jsx\vendor\daterangepicker.js" />
     <None Include="logs\**" />
     <None Include="sass\**" />
   </ItemGroup>
