--- a/Ilevus/package.json
+++ b/Ilevus/package.json
@@ -6,9 +6,9 @@
     "prestart": "npm install",
     "devbuild": "webpack --colors",
     "devstart": "webpack-dev-server --compress --progress --port 8081 --inline -w",
-    "devwatch": "webpack --colors --watch",
+    "devwatch": "webpack --watch --watch-poll --colors --progress",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "deploy": "NODE_ENV=\"production\" webpack --colors --progress --config webpack.production.config.js --optimize-dedupe --optimize-occurrence-order --optimize-minimize"
+    "deploy": "set NODE_ENV=production && webpack --colors --progress --config webpack.production.config.js --optimize-dedupe --optimize-occurrence-order --optimize-minimize"
   },
   "author": "Renato R. R. de Oliveira",
   "devDependencies": {
