Fechando revisão da versão 16.1.0.0

--- a/Ilevus/Web.Release.config
+++ b/Ilevus/Web.Release.config
@@ -4,10 +4,8 @@
 
 <configuration xmlns:xdt="http://schemas.microsoft.com/XML-Document-Transform">
   <appSettings>
-    <add key="BaseURL" value="https://www.ilevus.com/" xdt:Locator="Match(key)" xdt:Transform="SetAttributes" />
+    <add key="BaseURL" value="http://www.ilevus.com/" xdt:Locator="Match(key)" xdt:Transform="SetAttributes" />
     <add key="Env" value="production" xdt:Locator="Match(key)" xdt:Transform="SetAttributes" />
-    <add key="AWSAccessKey" value="*** Access Key Id ***" xdt:Locator="Match(key)" xdt:Transform="SetAttributes" />
-    <add key="AWSSecretKey" value="*** Secret Access Key ***" xdt:Locator="Match(key)" xdt:Transform="SetAttributes" />
   </appSettings>
   
   <!--
