--- a/Ilevus/packages.config
+++ b/Ilevus/packages.config
@@ -5,6 +5,8 @@
   <package id="CommonServiceLocator" version="1.3" targetFramework="net461" />
   <package id="log4net" version="2.0.5" targetFramework="net461" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net461" />
+  <package id="Microsoft.AspNet.Identity.Core.es" version="2.2.1" targetFramework="net461" />
+  <package id="Microsoft.AspNet.Identity.Core.pt-br" version="2.2.1" targetFramework="net461" />
   <package id="Microsoft.AspNet.Identity.Owin" version="2.2.1" targetFramework="net461" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net461" />
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net461" />
