--- a/Ilevus/packages.config
+++ b/Ilevus/packages.config
@@ -8,24 +8,36 @@
   <package id="Microsoft.AspNet.Identity.Core.es" version="2.2.1" targetFramework="net461" />
   <package id="Microsoft.AspNet.Identity.Core.pt-br" version="2.2.1" targetFramework="net461" />
   <package id="Microsoft.AspNet.Identity.Owin" version="2.2.1" targetFramework="net461" />
+  <package id="Microsoft.AspNet.Identity.Owin.es" version="2.2.1" targetFramework="net461" />
+  <package id="Microsoft.AspNet.Identity.Owin.pt-br" version="2.2.1" targetFramework="net461" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net461" />
+  <package id="Microsoft.AspNet.Mvc.es" version="5.2.3" targetFramework="net461" />
+  <package id="Microsoft.AspNet.Mvc.pt-br" version="5.2.3" targetFramework="net461" />
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebApi" version="5.2.3" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net461" />
+  <package id="Microsoft.AspNet.WebApi.Core.es" version="5.2.3" targetFramework="net461" />
+  <package id="Microsoft.AspNet.WebApi.Core.pt-br" version="5.2.3" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebApi.HelpPage" version="5.2.3" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebApi.Owin" version="5.2.3" targetFramework="net461" />
+  <package id="Microsoft.AspNet.WebApi.Owin.es" version="5.2.3" targetFramework="net461" />
+  <package id="Microsoft.AspNet.WebApi.Owin.pt-br" version="5.2.3" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.3" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net461" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.1" targetFramework="net461" />
   <package id="Microsoft.Net.Compilers" version="1.2.1" targetFramework="net461" developmentDependency="true" />
   <package id="Microsoft.Owin" version="3.0.1" targetFramework="net461" />
   <package id="Microsoft.Owin.Diagnostics" version="3.0.1" targetFramework="net461" />
+  <package id="Microsoft.Owin.es" version="3.0.1" targetFramework="net461" />
   <package id="Microsoft.Owin.Host.SystemWeb" version="3.0.1" targetFramework="net461" />
+  <package id="Microsoft.Owin.Host.SystemWeb.es" version="3.0.1" targetFramework="net461" />
   <package id="Microsoft.Owin.Host.SystemWeb.pt-br" version="3.0.1" targetFramework="net461" />
+  <package id="Microsoft.Owin.pt-br" version="3.0.1" targetFramework="net461" />
   <package id="Microsoft.Owin.Security" version="3.0.1" targetFramework="net461" />
   <package id="Microsoft.Owin.Security.Cookies" version="3.0.1" targetFramework="net461" />
   <package id="Microsoft.Owin.Security.OAuth" version="3.0.1" targetFramework="net461" />
+  <package id="Microsoft.Owin.Security.pt-br" version="3.0.1" targetFramework="net461" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net461" />
   <package id="MongoDB.Bson" version="2.2.4" targetFramework="net461" />
   <package id="MongoDB.Driver" version="2.2.4" targetFramework="net461" />
