--- a/Ilevus/package.json
+++ b/Ilevus/package.json
@@ -4,9 +4,9 @@
   "description": "ilevus",
   "scripts": {
     "prestart": "npm install",
-    "devbuild": "webpack --colors",
+    "devbuild": "set NODE_ENV=development && webpack --colors",
     "devstart": "webpack-dev-server --compress --progress --port 8081 --inline -w",
-    "devwatch": "webpack --watch --watch-poll --colors --progress",
+    "devwatch": "set NODE_ENV=development && webpack --watch --watch-poll --colors --progress",
     "test": "echo \"Error: no test specified\" && exit 1",
     "deploy": "set NODE_ENV=production && webpack --colors --progress --config webpack.production.config.js --optimize-dedupe --optimize-occurrence-order --optimize-minimize"
   },
