--- a/Ilevus/package.json
+++ b/Ilevus/package.json
@@ -13,6 +13,7 @@
   },
   "author": "Renato R. R. de Oliveira",
   "devDependencies": {
+    "autoprefixer": "^6.3.7",
     "babel-core": "^6.7.7",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.6.0",
@@ -23,6 +24,7 @@
     "file-loader": "^0.8.4",
     "imports-loader": "^0.6.5",
     "node-sass": "^3.6.0",
+    "postcss-loader": "^0.9.1",
     "sass-loader": "^3.2.0",
     "style-loader": "^0.13.0",
     "url-loader": "^0.5.6"
