Finalmente, login com linkedin e facebook.

--- a/Ilevus/Web.Release.config
+++ b/Ilevus/Web.Release.config
@@ -4,8 +4,11 @@
 
 <configuration xmlns:xdt="http://schemas.microsoft.com/XML-Document-Transform">
   <appSettings>
-    <add key="BaseURL" value="http://www.ilevus.com/" xdt:Locator="Match(key)" xdt:Transform="SetAttributes" />
+    <add key="BaseURL" value="https://www.ilevus.com/" xdt:Locator="Match(key)" xdt:Transform="SetAttributes" />
     <add key="Env" value="production" xdt:Locator="Match(key)" xdt:Transform="SetAttributes" />
+    <add key="FacebookClient" value="1734577366759378" xdt:Locator="Match(key)" xdt:Transform="SetAttributes" />
+    <add key="FacebookSecret" value="8d47e6d3ae778e92b343f2a6095a2e6c" xdt:Locator="Match(key)" xdt:Transform="SetAttributes" />
+    <add key="FacebookAppToken" value="1734577366759378|al8qJYn1T0ca4SUz1driTS5q21I" xdt:Locator="Match(key)" xdt:Transform="SetAttributes" />
   </appSettings>
   
   <!--
