--- a/Ilevus/Web.config
+++ b/Ilevus/Web.config
@@ -10,6 +10,11 @@
   <appSettings>
     <add key="BaseURL" value="http://localhost:57141/" />
     <add key="Env" value="development" />
+    <add key="FacebookClient" value="1734579453425836" />
+    <add key="FacebookSecret" value="6b29f7811834f853d6ff0a583e6a71db" />
+    <add key="FacebookAppToken" value="1734579453425836|6bEgCeNnkTBYxXqlO5WLEBGqcp0" />
+    <add key="LinkedinClient" value="77si0e657lpx43" />
+    <add key="LinkedinSecret" value="KDVvt3aP3U5kVKjF" />
   </appSettings>
   <log4net>
     <appender name="RollingLogFileAppender" type="log4net.Appender.RollingFileAppender">
