--- a/Ilevus/packages.config
+++ b/Ilevus/packages.config
@@ -3,6 +3,7 @@
   <package id="Antlr" version="3.5.0.2" targetFramework="net461" />
   <package id="AspNet.Identity.MongoDB-2" version="2.0.1" targetFramework="net461" />
   <package id="CommonServiceLocator" version="1.3" targetFramework="net461" />
+  <package id="Facebook" version="7.0.6" targetFramework="net461" />
   <package id="log4net" version="2.0.5" targetFramework="net461" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net461" />
   <package id="Microsoft.AspNet.Identity.Core.es" version="2.2.1" targetFramework="net461" />
@@ -36,6 +37,9 @@
   <package id="Microsoft.Owin.pt-br" version="3.0.1" targetFramework="net461" />
   <package id="Microsoft.Owin.Security" version="3.0.1" targetFramework="net461" />
   <package id="Microsoft.Owin.Security.Cookies" version="3.0.1" targetFramework="net461" />
+  <package id="Microsoft.Owin.Security.Facebook" version="3.0.1" targetFramework="net461" />
+  <package id="Microsoft.Owin.Security.Facebook.es" version="3.0.1" targetFramework="net461" />
+  <package id="Microsoft.Owin.Security.Facebook.pt-br" version="3.0.1" targetFramework="net461" />
   <package id="Microsoft.Owin.Security.OAuth" version="3.0.1" targetFramework="net461" />
   <package id="Microsoft.Owin.Security.pt-br" version="3.0.1" targetFramework="net461" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net461" />
@@ -44,6 +48,7 @@
   <package id="MongoDB.Driver.Core" version="2.2.4" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="8.0.3" targetFramework="net461" />
   <package id="Owin" version="1.0" targetFramework="net461" />
+  <package id="Owin.Security.Providers.LinkedIn" version="2.7.0" targetFramework="net461" />
   <package id="Unity" version="4.0.1" targetFramework="net461" />
   <package id="Unity.Interception" version="4.0.1" targetFramework="net461" />
 </packages>
