--- a/Ilevus/Ilevus.csproj
+++ b/Ilevus/Ilevus.csproj
@@ -254,8 +254,11 @@
     <Content Include="Web.Release.config">
       <DependentUpon>Web.config</DependentUpon>
     </Content>
+    <None Include="jsx\core\view\help\markdown-guide.md" />
+    <Content Include="jsx\core\view\help\MarkdownGuide.jsx" />
     <None Include="package.json" />
     <None Include="Properties\PublishProfiles\Ivan.pubxml" />
+    <Content Include="sass\custom\_toast.scss" />
     <None Include="webpack.config.js" />
     <None Include="webpack.production.config.js" />
   </ItemGroup>
@@ -308,7 +311,72 @@
     <None Include="jsx\vendor\anvil\util.jsx" />
     <None Include="jsx\vendor\daterangepicker.js" />
     <None Include="logs\**" />
-    <None Include="sass\**" />
+    <None Include="sass\anvil.scss" />
+    <None Include="sass\components\_alert.scss" />
+    <None Include="sass\components\_avatar.scss" />
+    <None Include="sass\components\_blankslate.scss" />
+    <None Include="sass\components\_button-group.scss" />
+    <None Include="sass\components\_buttons.scss" />
+    <None Include="sass\components\_card.scss" />
+    <None Include="sass\components\_forms.scss" />
+    <None Include="sass\components\_input-group.scss" />
+    <None Include="sass\components\_media.scss" />
+    <None Include="sass\components\_nav.scss" />
+    <None Include="sass\components\_navbar.scss" />
+    <None Include="sass\components\_tables.scss" />
+    <None Include="sass\components\_tag.scss" />
+    <None Include="sass\custom\_card.scss" />
+    <None Include="sass\custom\_page-banner.scss" />
+    <None Include="sass\custom\_variables.scss" />
+    <None Include="sass\dependencies\core\_code.scss" />
+    <None Include="sass\dependencies\core\_crossbrowser.scss" />
+    <None Include="sass\dependencies\core\_images.scss" />
+    <None Include="sass\dependencies\core\_reboot.scss" />
+    <None Include="sass\dependencies\core\_type.scss" />
+    <None Include="sass\dependencies\mixins\_alert.scss" />
+    <None Include="sass\dependencies\mixins\_border-radius.scss" />
+    <None Include="sass\dependencies\mixins\_box-shadow.scss" />
+    <None Include="sass\dependencies\mixins\_breakpoints.scss" />
+    <None Include="sass\dependencies\mixins\_buttons.scss" />
+    <None Include="sass\dependencies\mixins\_clearfix.scss" />
+    <None Include="sass\dependencies\mixins\_hover.scss" />
+    <None Include="sass\dependencies\mixins\_image.scss" />
+    <None Include="sass\dependencies\mixins\_lists.scss" />
+    <None Include="sass\dependencies\mixins\_paragraph-width.scss" />
+    <None Include="sass\dependencies\mixins\_size.scss" />
+    <None Include="sass\dependencies\mixins\_tab-focus.scss" />
+    <None Include="sass\dependencies\mixins\_tag.scss" />
+    <None Include="sass\dependencies\mixins\_text-truncate.scss" />
+    <None Include="sass\dependencies\mixins\_transition.scss" />
+    <None Include="sass\dependencies\utilities\_text.scss" />
+    <None Include="sass\dependencies\variables\_alert.scss" />
+    <None Include="sass\dependencies\variables\_avatar.scss" />
+    <None Include="sass\dependencies\variables\_blankslate.scss" />
+    <None Include="sass\dependencies\variables\_breakpoints.scss" />
+    <None Include="sass\dependencies\variables\_button-group.scss" />
+    <None Include="sass\dependencies\variables\_buttons.scss" />
+    <None Include="sass\dependencies\variables\_card.scss" />
+    <None Include="sass\dependencies\variables\_code.scss" />
+    <None Include="sass\dependencies\variables\_colors.scss" />
+    <None Include="sass\dependencies\variables\_forms.scss" />
+    <None Include="sass\dependencies\variables\_images.scss" />
+    <None Include="sass\dependencies\variables\_input-group.scss" />
+    <None Include="sass\dependencies\variables\_links.scss" />
+    <None Include="sass\dependencies\variables\_nav.scss" />
+    <None Include="sass\dependencies\variables\_navbar.scss" />
+    <None Include="sass\dependencies\variables\_scaffolding.scss" />
+    <None Include="sass\dependencies\variables\_spacers.scss" />
+    <None Include="sass\dependencies\variables\_tables.scss" />
+    <None Include="sass\dependencies\variables\_tag.scss" />
+    <None Include="sass\dependencies\variables\_type.scss" />
+    <None Include="sass\dependencies\_mixins.scss" />
+    <None Include="sass\dependencies\_normalize.scss" />
+    <None Include="sass\dependencies\_print.scss" />
+    <None Include="sass\dependencies\_variables.scss" />
+    <None Include="sass\layouts\_page-header.scss" />
+    <None Include="sass\vendor\_bootstrap.scss" />
+    <None Include="sass\vendor\_materialicons.scss" />
+    <Content Include="sass\custom\_markdown.scss" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
