--- a/Ilevus/package.json
+++ b/Ilevus/package.json
@@ -25,6 +25,7 @@
     "imports-loader": "^0.6.5",
     "node-sass": "^3.6.0",
     "postcss-loader": "^0.9.1",
+    "raw-loader": "^0.5.1",
     "sass-loader": "^3.2.0",
     "style-loader": "^0.13.0",
     "url-loader": "^0.5.6"
@@ -36,6 +37,7 @@
     "flux": "^2.1.1",
     "history": "^2.1.1",
     "jquery": "^2.2.3",
+    "marked": "^0.3.5",
     "moment": "^2.13.0",
     "numeral": "^1.5.3",
     "react": "^15.0.2",
