--- a/Ilevus/Ilevus.csproj
+++ b/Ilevus/Ilevus.csproj
@@ -258,6 +258,7 @@
     <Content Include="Web.Release.config">
       <DependentUpon>Web.config</DependentUpon>
     </Content>
+    <Content Include="jsx\core\util\Languages.json" />
     <None Include="jsx\core\view\help\markdown-guide.md" />
     <Content Include="jsx\core\view\help\MarkdownGuide.jsx" />
     <Content Include="jsx\core\view\user\ProfessionalProfile.jsx" />
@@ -266,9 +267,13 @@
     <Content Include="jsx\core\view\user\ProfileWizardBasic.jsx" />
     <Content Include="jsx\core\view\user\ProfileWizardCareer.jsx" />
     <Content Include="jsx\core\view\user\ProfileWizardEducation.jsx" />
+    <Content Include="jsx\core\widget\LanguageSelect.jsx" />
     <None Include="package.json" />
     <None Include="Properties\PublishProfiles\Ivan.pubxml" />
     <Content Include="sass\custom\_toast.scss" />
+    <Content Include="sass\custom\_buttons-social.scss" />
+    <Content Include="sass\components\_progress.scss" />
+    <Content Include="sass\custom\_general.scss" />
     <None Include="webpack.config.js" />
     <None Include="webpack.production.config.js" />
   </ItemGroup>
