--- a/Ilevus/package.json
+++ b/Ilevus/package.json
@@ -23,6 +23,7 @@
     "extract-text-webpack-plugin": "^0.9.1",
     "file-loader": "^0.8.4",
     "imports-loader": "^0.6.5",
+    "json-loader": "^0.5.4",
     "node-sass": "^3.6.0",
     "postcss-loader": "^0.9.1",
     "raw-loader": "^0.5.1",
