Wizard: Informações sobre formação acadêmica.

--- a/Ilevus/Ilevus.csproj
+++ b/Ilevus/Ilevus.csproj
@@ -262,12 +262,13 @@
     <None Include="jsx\core\view\help\markdown-guide.md" />
     <Content Include="jsx\core\view\help\MarkdownGuide.jsx" />
     <Content Include="jsx\core\view\user\ProfessionalProfile.jsx" />
-    <Content Include="jsx\core\view\user\ProfileWizard.jsx" />
-    <Content Include="jsx\core\view\user\ProfileWizardAddress.jsx" />
-    <Content Include="jsx\core\view\user\ProfileWizardBasic.jsx" />
-    <Content Include="jsx\core\view\user\ProfileWizardCareer.jsx" />
-    <Content Include="jsx\core\view\user\ProfileWizardEducation.jsx" />
+    <Content Include="jsx\core\view\user\wizard\ProfileWizard.jsx" />
+    <Content Include="jsx\core\view\user\wizard\ProfileWizardServices.jsx" />
+    <Content Include="jsx\core\view\user\wizard\ProfileWizardBasic.jsx" />
+    <Content Include="jsx\core\view\user\wizard\ProfileWizardCareer.jsx" />
+    <Content Include="jsx\core\view\user\wizard\ProfileWizardEducation.jsx" />
     <Content Include="jsx\core\widget\LanguageSelect.jsx" />
+    <Content Include="jsx\core\widget\user\EducationForm.jsx" />
     <None Include="package.json" />
     <None Include="Properties\PublishProfiles\Ivan.pubxml" />
     <Content Include="sass\custom\_toast.scss" />
