--- a/Ilevus/Ilevus.csproj
+++ b/Ilevus/Ilevus.csproj
@@ -270,6 +270,8 @@
     <Content Include="jsx\core\widget\LanguageSelect.jsx" />
     <Content Include="jsx\core\widget\user\EducationForm.jsx" />
     <Content Include="jsx\core\widget\user\CareerForm.jsx" />
+    <Content Include="jsx\core\view\user\wizard\ProfileWizardAddress.jsx" />
+    <Content Include="jsx\core\widget\user\AddressForm.jsx" />
     <None Include="package.json" />
     <None Include="Properties\PublishProfiles\Ivan.pubxml" />
     <Content Include="sass\custom\_toast.scss" />
