Seleção de países com nomes nativos e correção do tether bugado.

--- a/Ilevus/Ilevus.csproj
+++ b/Ilevus/Ilevus.csproj
@@ -263,6 +263,7 @@
       <DependentUpon>Web.config</DependentUpon>
     </Content>
     <Content Include="jsx\core\util\Languages.json" />
+    <Content Include="jsx\core\util\Countries.json" />
     <None Include="jsx\core\view\help\markdown-guide.md" />
     <Content Include="jsx\core\view\help\MarkdownGuide.jsx" />
     <Content Include="jsx\core\view\user\ProfessionalProfile.jsx" />
