--- a/Ilevus/package.json
+++ b/Ilevus/package.json
@@ -5,9 +5,9 @@
   "scripts": {
     "whichnode": "where webpack",
     "prestart": "npm install",
-    "devbuild": "set NODE_ENV=development && webpack --colors",
+    "devbuild": "set NODE_ENV=development && webpack --progress --colors -d",
     "devstart": "set NODE_ENV=development && webpack-dev-server --compress --progress --colors --port 8081 --inline --watch --watch-poll",
-    "devwatch": "set NODE_ENV=development && webpack --watch --watch-poll --colors --progress",
+    "devwatch": "set NODE_ENV=development && webpack --watch --watch-poll --colors --progress -d",
     "test": "echo \"Error: no test specified\" && exit 1",
     "deploy": "set NODE_ENV=production && webpack --colors --progress --config webpack.production.config.js --optimize-dedupe --optimize-occurrence-order --optimize-minimize"
   },
