Correcoes nas traducoes e favicon

--- a/ilevus.Resources/ilevus.Resources.csproj
+++ b/ilevus.Resources/ilevus.Resources.csproj
@@ -69,6 +69,7 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Messages.resx">
       <Generator>PublicResXFileCodeGenerator</Generator>
+      <LastGenOutput>Messages1.Designer.cs</LastGenOutput>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
