--- a/Ilevus/package.json
+++ b/Ilevus/package.json
@@ -40,6 +40,7 @@
     "jquery": "^2.2.3",
     "marked": "^0.3.5",
     "moment": "^2.13.0",
+    "moment-range": "^2.2.0",
     "numeral": "^1.5.3",
     "react": "^15.0.2",
     "react-dom": "^15.0.2",
