--- a/Ilevus/Ilevus.csproj
+++ b/Ilevus/Ilevus.csproj
@@ -306,6 +306,7 @@
     <Content Include="jsx\core\view\user\Schedule.jsx" />
     <Content Include="jsx\core\widget\user\MeetingScheduleConfig.jsx" />
     <Content Include="jsx\core\view\user\ViewSchedule.jsx" />
+    <Content Include="jsx\core\widget\admin\AdForm.jsx" />
     <None Include="package.json" />
     <None Include="Properties\PublishProfiles\Ivan.pubxml" />
     <Content Include="sass\custom\_toast.scss" />
