--- a/Ilevus/Ilevus.csproj
+++ b/Ilevus/Ilevus.csproj
@@ -307,6 +307,7 @@
     <Content Include="jsx\core\widget\user\MeetingScheduleConfig.jsx" />
     <Content Include="jsx\core\view\user\ViewSchedule.jsx" />
     <Content Include="jsx\core\widget\admin\AdForm.jsx" />
+    <Content Include="jsx\core\widget\AdSideBar.jsx" />
     <None Include="package.json" />
     <None Include="Properties\PublishProfiles\Ivan.pubxml" />
     <Content Include="sass\custom\_toast.scss" />
