--- a/Ilevus/package.json
+++ b/Ilevus/package.json
@@ -37,7 +37,7 @@
     "bootstrap": "^4.0.0-alpha.3",
     "flux": "^2.1.1",
     "history": "^2.1.1",
-    "jquery": "^2.2.3",
+    "jquery": "3",
     "marked": "^0.3.5",
     "moment": "^2.13.0",
     "moment-range": "^2.2.0",
