--- a/Ilevus/Ilevus.csproj
+++ b/Ilevus/Ilevus.csproj
@@ -308,6 +308,7 @@
     <Content Include="jsx\core\view\user\ViewSchedule.jsx" />
     <Content Include="jsx\core\widget\admin\AdForm.jsx" />
     <Content Include="jsx\core\widget\AdSideBar.jsx" />
+    <Content Include="jsx\core\view\user\coaching\SessionDetails.jsx" />
     <None Include="package.json" />
     <None Include="Properties\PublishProfiles\Ivan.pubxml" />
     <Content Include="sass\custom\_toast.scss" />
