Listagem dos processos de coaching

--- a/Ilevus/Ilevus.csproj
+++ b/Ilevus/Ilevus.csproj
@@ -313,6 +313,7 @@
     <Content Include="jsx\core\widget\AdSideBar.jsx" />
     <Content Include="jsx\core\view\user\coaching\SessionDetails.jsx" />
     <Content Include="jsx\core\view\user\coaching\HireProfessional.jsx" />
+    <Content Include="jsx\core\widget\user\CoachingProcesses.jsx" />
     <None Include="package.json" />
     <None Include="Properties\PublishProfiles\Ivan.pubxml" />
     <Content Include="sass\custom\_toast.scss" />
