Incluindo o chart de Radar para roda da vida.

--- a/Ilevus/Ilevus.csproj
+++ b/Ilevus/Ilevus.csproj
@@ -315,6 +315,7 @@
     <Content Include="jsx\core\view\user\coaching\HireProfessional.jsx" />
     <Content Include="jsx\core\view\user\coaching\CoachingProcesses.jsx" />
     <Content Include="jsx\core\widget\coaching\EditableTextArea.jsx" />
+    <Content Include="jsx\core\widget\coaching\wheeloflife\Chart.jsx" />
     <None Include="package.json" />
     <None Include="Properties\PublishProfiles\Ivan.pubxml" />
     <Content Include="sass\custom\_toast.scss" />
@@ -463,6 +464,7 @@
   <ItemGroup>
     <Folder Include="App_Data\pictures\" />
     <Folder Include="Content\" />
+    <Folder Include="jsx\core\view\user\coaching\wheeloflife\" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
