--- a/Ilevus/package.json
+++ b/Ilevus/package.json
@@ -40,9 +40,9 @@
     "history": "^2.1.1",
     "jquery": "3",
     "marked": "^0.3.5",
-    "moment": "^2.13.0",
+    "moment": "2.x.x",
     "moment-range": "^2.2.0",
-    "numeral": "^1.5.3",
+    "numeral": "2.x.x",
     "react": "^15.0.2",
     "react-chartjs-2": "^2.0.5",
     "react-dom": "^15.0.2",
