--- a/Ilevus/Ilevus.csproj
+++ b/Ilevus/Ilevus.csproj
@@ -319,6 +319,7 @@
     <Content Include="jsx\core\widget\coaching\SessionHistory.jsx" />
     <Content Include="jsx\core\view\user\coaching\CoachingProcessesDefinition.jsx" />
     <Content Include="jsx\core\view\user\coaching\tools\wheeloflife\WheelOfLife.jsx" />
+    <Content Include="jsx\core\widget\coaching\SessionCharts.jsx" />
     <None Include="package.json" />
     <None Include="Properties\PublishProfiles\Ivan.pubxml" />
     <Content Include="sass\custom\_toast.scss" />
