--- a/Ilevus/package.json
+++ b/Ilevus/package.json
@@ -9,7 +9,7 @@
     "devstart": "set NODE_ENV=development && webpack-dev-server --compress --progress --colors --port 8081 --inline --watch --watch-poll",
     "devwatch": "set NODE_ENV=development && webpack --watch --watch-poll --colors --progress -d",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "deploy": "NODE_ENV=production webpack --colors --progress --config webpack.production.config.js --optimize-dedupe --optimize-occurrence-order --optimize-minimize"
+    "deploy": "webpack --colors --progress --config webpack.production.config.js --optimize-dedupe --optimize-occurrence-order --optimize-minimize"
   },
   "author": "Renato R. R. de Oliveira",
   "devDependencies": {
