--- a/Ilevus/package.json
+++ b/Ilevus/package.json
@@ -29,13 +29,15 @@
     "raw-loader": "^0.5.1",
     "sass-loader": "^3.2.0",
     "style-loader": "^0.13.0",
-    "url-loader": "^0.5.6"
+    "url-loader": "^0.5.6",
+    "webpack": "1.x"
   },
   "dependencies": {
     "backbone": "^1.3.3",
     "blueimp-file-upload": "^9.12.4",
     "bootstrap": "^4.0.0-alpha.3",
     "chart.js": "^2.5.0",
+    "create-react-class": "^15.5.2",
     "flux": "^2.1.1",
     "history": "^2.1.1",
     "jquery": "3",
@@ -43,10 +45,11 @@
     "moment": "2.x.x",
     "moment-range": "^2.2.0",
     "numeral": "2.x.x",
-    "react": "^15.0.2",
+    "prop-types": "^15.5.8",
+    "react": "15.4.x",
     "react-chartjs-2": "^2.0.5",
     "react-color": "^2.11.4",
-    "react-dom": "^15.0.2",
+    "react-dom": "15.4.x",
     "react-maskedinput": "^3.2.0",
     "react-router": "^2.4.0",
     "string": "^3.3.1",
