--- a/Ilevus/Ilevus.csproj
+++ b/Ilevus/Ilevus.csproj
@@ -328,6 +328,7 @@
     <Content Include="jsx\core\view\user\coaching\tools\CoachingToolsContainer.jsx" />
     <Content Include="jsx\core\widget\coaching\SessionTools.jsx" />
     <Content Include="jsx\core\widget\coaching\SessionTimer.jsx" />
+    <Content Include="jsx\core\widget\coaching\SessionTags.jsx" />
     <None Include="package.json" />
     <None Include="Properties\PublishProfiles\Ivan.pubxml" />
     <Content Include="sass\custom\_toast.scss" />
