--- a/Ilevus/Ilevus.csproj
+++ b/Ilevus/Ilevus.csproj
@@ -329,6 +329,8 @@
     <Content Include="jsx\core\widget\coaching\SessionTools.jsx" />
     <Content Include="jsx\core\widget\coaching\SessionTimer.jsx" />
     <Content Include="jsx\core\widget\coaching\SessionTags.jsx" />
+    <Content Include="jsx\core\view\user\coaching\tools\wheeloflife\Configure.jsx" />
+    <Content Include="jsx\core\widget\coaching\EditableText.jsx" />
     <None Include="package.json" />
     <None Include="Properties\PublishProfiles\Ivan.pubxml" />
     <Content Include="sass\custom\_toast.scss" />
