--- a/Ilevus/Ilevus.csproj
+++ b/Ilevus/Ilevus.csproj
@@ -264,9 +264,11 @@
     <Content Include="Global.asax" />
     <Content Include="img\flags%402x.png" />
     <Content Include="img\flags.png" />
+    <Content Include="img\moip.png" />
     <Content Include="img\user.png" />
     <Content Include="jsx\core\util\Analytics.js" />
     <Content Include="jsx\vendor\intlTelInput.js" />
+    <Content Include="jsx\vendor\moip.js" />
     <Content Include="jsx\vendor\utils.js" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
@@ -289,6 +291,7 @@
     <Content Include="jsx\core\store\Coaching.jsx" />
     <Content Include="jsx\core\store\coaching\Tools.json" />
     <Content Include="jsx\core\store\coaching\WheelOfLife.jsx" />
+    <Content Include="jsx\core\view\admin\AdminPanelApis.jsx" />
     <None Include="jsx\core\view\help\markdown-guide.md" />
     <Content Include="jsx\core\view\help\MarkdownGuide.jsx" />
     <Content Include="jsx\core\view\user\ProfessionalProfile.jsx" />
