--- a/Ilevus/Ilevus.csproj
+++ b/Ilevus/Ilevus.csproj
@@ -268,6 +268,8 @@
     <Content Include="img\user.png" />
     <Content Include="jsx\core\util\Analytics.js" />
     <Content Include="jsx\vendor\intlTelInput.js" />
+    <Content Include="jsx\vendor\moip-assinaturas-sandbox.js" />
+    <Content Include="jsx\vendor\moip-assinaturas.js" />
     <Content Include="jsx\vendor\moip.js" />
     <Content Include="jsx\vendor\utils.js" />
     <Content Include="Web.config" />
@@ -334,6 +336,8 @@
     <Content Include="jsx\core\widget\coaching\SessionTags.jsx" />
     <Content Include="jsx\core\view\user\coaching\tools\wheeloflife\Configure.jsx" />
     <Content Include="jsx\core\widget\coaching\EditableText.jsx" />
+    <Content Include="jsx\core\view\user\Financial.jsx" />
+    <Content Include="jsx\core\view\user\Subscribe.jsx" />
     <None Include="package.json" />
     <None Include="Properties\PublishProfiles\Ivan.pubxml" />
     <Content Include="sass\custom\_toast.scss" />
